# uwebasr-calibrate

./: .gitignore  CALIBRATION.md  DATASET.md  DATASETS.md  README.md  calibrate_all.sh  calibrate_multi.sh  pyproject.toml  uwebasr-calibrated.py
uwebasr_calibrate/: __init__.py  asr.py  cli.py  data.py  features.py  model.py  normalizer.py
