[project]
name = "uwebasr-calibrate"
version = "0.1.0"
description = "UWebASR Confidence Calibration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "jiwer>=3.0.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
uwebasr-calibrate = "uwebasr_calibrate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
